--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ trnsl.1.1.20160729T161957Z.a237cec427a38529.8b040c7c8e0aa9624182664e3e4d5c0ddbd9
 
 
 
-            <div class="row" id="projects" style="display:nonre">
+            <div class="row" id="projects" style="display:none">
             <div class="col-md-3"   id="contacts" style="background:#efefef;height:500px">
 
                 Loading...
